--- a/src/components/Menu/FilterableMenu/index.scss
+++ b/src/components/Menu/FilterableMenu/index.scss
@@ -11,7 +11,7 @@
   }
 
   & .tree_menu {
-    flex: 1;
+    flex: 1 1 auto;
     overflow: scroll;
   }
 }
